--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,6 +3,18 @@
 
 <%#  Part 2: Start here... %>
 
+<%= form_tag movies_path, method: :get, id: 'ratings_form', local: true do %>
+  Include:
+  <% @all_ratings.each do |rating| %>
+    <div class="form-check  form-check-inline">
+      <%= check_box_tag "ratings[#{rating}]", "1", @ratings_to_show.include?(rating), class: 'form-check-input' %>
+      <%= label_tag "ratings[#{rating}]", rating, class: 'form-check-label' %>
+    </div>
+  <% end %>
+  <%= submit_tag 'Refresh', id: 'ratings_submit', class: 'btn btn-primary' %>
+  
+<% end %>
+
 <h1>Movies</h1>
 
 <div id="movies">
